--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "vue": "^3.2.25"
